Refactored to using constants for http key value headers